--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,4 +12,13 @@
         android:layout_height="320dp"
         android:layout_centerInParent="true" />
 
+    <Button
+        android:id="@+id/startBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_below="@+id/boardView"
+        android:layout_centerHorizontal="true"
+        android:text="Start game" />
+
 </RelativeLayout>
